=========================================================================
Date                Version     Description
=========================================================================

2022-01-05: v2.4.9 : Improve store scope handling.
                     Update Masterpass to Scan to Pay. 

2021-10-20: v2.4.8 : Improve fetch method to uncancel approved fetched orders.

2021-10-08: v2.4.7 : Add debug logging option for fetch method.
                     Only use real order ID in PayWeb reference field.

2021-09-15: v2.4.6 : Disable PayGate on unsupported multiship.
                     Fix undefined offset on cron query method.
                     Improve Payment Type styling on one step checkout.
                     Add additional logging on fetch method.

2021-08-12: v2.4.5 : Fix Swagger API issue.
                     Add PayPal payment type.
                     Fix DATA_CHK issue on Payment Types.

2021-07-30: v2.4.4 : Consolidate Cron class into single file for Magento 2.4.x.
                     Block double order processing on multiple requests.
                     Add API support for PayGate payment gateway.
                     Improve multisite scope handling for Fetch and Cron.
                     Add support for Store Credit if available (getTotalDue).

2021-07-05: v2.4.3 : Increase cron schedule to query every 10 minutes.

2021-06-15: v2.4.2 : Fix cron query method not firing as expected on some configurations.
                     Fix 'Fetch' query method not updating order status from backend.
                     Remove redirect button.
                     Code refactor and format.
                     Improve IPN reliability.

2021-05-14: v2.4.1 : Fix PayVault Card Delete.
                     Transaction ID added for Pending orders after initiate.
                     Cron schedule amended.
                     Payment Types radio block fix for some themes.
                     Remove object manager.